# budget-buddy

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  compose.yaml  conftest.py  docker-compose.yaml  dto.py  nginx.conf  pyproject.toml  rabbitmq-definitions.json  ruff.toml  run.py  settings.py  web_server.py  xunit.runner.json
apps/auth/: pyproject.toml
apps/auth/src/auth/: __init__.py
apps/auth/tests/: conftest.py
backend/: .dockerignore  .pylintrc  Dockerfile  alembic.ini  mypy.ini  pyproject.toml
backend/src/: celery_app.py  configuration.py  logger_config.py  main.py  subscriber_main.py
backend/src/adapters/: README.md
backend/src/adapters/inbound/: __init__.py  in_memory_domain_publisher.py
backend/src/adapters/outbound/: uow.py
backend/src/application/: README.md  security.py
backend/src/application/commands/: README.md  __init__.py  add_category_command.py  calculate_statistics_command.py  command.py  create_budget_command.py  create_transaction_command.py  deactivate_budget_command.py  delete_transaction_command.py  edit_category_command.py  edit_transaction_command.py  recalculate_statistics_after_update_command.py  remove_category_command.py  renew_budget_command.py
backend/src/application/dtos/: __init__.py  budget_dto.py  budget_strategy_dto.py  category_dto.py  category_list_dto.py  category_statistics_record_dto.py  dto.py  dtos.py  money_dto.py  paginated_item_dto.py  statistics_record_dto.py  transaction_dto.py
backend/src/application/exceptions/: __init__.py  user_already_exists_error.py
backend/src/application/queries/: __init__.py  get_budget_by_id_query.py  get_budget_statistics_query.py  get_budgets_query.py  get_categories_query.py  get_category_by_id_query.py  get_transaction_by_id_query.py  get_transactions_query.py
backend/src/application/services/: __init__.py  security_service.py  unauthorized_user_error.py  user_not_found_error.py  user_service.py
backend/src/domain/: README.md  __init__.py  exceptions.py
backend/src/domain/aggregates/: __init__.py  budget.py  statistics_record.py  transaction.py
backend/src/domain/entities/: __init__.py  category.py  category_statistic_record.py
backend/src/domain/events/: __init__.py  domain_event.py  transaction_deleted_event.py  transaction_edited_event.py
backend/src/domain/exceptions/: __init__.py  budget_name_too_long_error.py  budget_name_too_short_error.py  budget_not_found_error.py  budget_strategy_error.py  cannot_add_transaction_to_deactivated_budget_error.py  cannot_renew_deactivated_budget_error.py  category_limit_exceeds_budget_error.py  category_name_too_long_error.py  category_name_too_short_error.py  category_not_found_error.py  domain_exception.py  duplicate_category_name_error.py  empty_budget_name_error.py  empty_category_name_error.py  limit_error.py  max_categories_reached_error.py  money_error.py  not_compatible_version_error.py  statistics_not_found_exceptions.py  statistics_record_not_found_error.py  transaction_not_found_error.py  transaction_outside_budget_period_error.py  transaction_transfer_policy_error.py
backend/src/domain/factories/: __init__.py  budget_factory.py  statistics_record_factory.py  statistics_record_update_factory.py  transaction_factory.py
backend/src/domain/ports/: __init__.py  budget_repository.py  clock.py  domain_publisher.py  task_scheduler.py  transaction_repository.py
backend/src/domain/services/: __init__.py  budget_deactivation_service.py  budget_renewal_service.py  reassign_transactions_service.py  statistics_calculation_service.py  transaction_transfer_service.py
backend/src/domain/strategies/: delete_transactions_strategy.py  move_transactions_strategy.py  transaction_transfer_strategy.py
backend/src/domain/value_objects/: __init__.py  budget_name.py  budget_strategy.py  category_name.py  limit.py  money.py  transaction_transfer_policy.py  transaction_type.py
backend/src/infrastracture/: application.py  container.py  create_app.py  factory.py  logging.py  settings.py
backend/src/infrastracture/container/: app_container.py  (+2 more)
backend/src/infrastructure/: application.py  celery_logging.py  create_app.py  logging.py  openapi.json  settings.py
backend/tests/domain/: test_exceptions.py
(+406 files in other folders)
