[project]
name = "budget-buddy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "libs/monetary",
    "apps/budgets",
    "libs/core",
    "apps/auth",
]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-bdd>=8.1.0",
    "pytest-bdd-report>=1.1.0",
    "ruff>=0.14.5",
]
