[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.13.0"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "dependency-injector>=4.46.0",
    "fastapi>=0.115.12",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.4",
]
