[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "asyncpg>=0.30.0",
    "celery>=5.5.1",
    "dependency-injector>=4.46.0",
    "fastapi>=0.115.12",
    "pika>=1.3.2",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "sqlalchemy[asyncio]>=2.0.40",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
