[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "aio-pika>=9.5.5",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "celery>=5.5.1",
    "dependency-injector>=4.46.0",
    "fastapi>=0.115.12",
    "flower>=2.0.1",
    "greenlet>=3.2.0",
    "pydantic[email]>=2.11.3",
    "pydantic-settings>=2.9.1",
    "redis>=5.2.1",
    "sqlalchemy[asyncio]>=2.0.40",
    "uvicorn>=0.34.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
