[project]
name = "auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "weblizzard", email = "czarnous.adrian@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "core",
]

[project.scripts]
auth = "auth:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
core = { workspace = true }
