[project]
name = "auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "weblizzard", email = "czarnous.adrian@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.6.5",
    "core",
    "cryptography>=46.0.3",
    "httpx>=0.28.1",
    "py-bcrypt>=0.4",
    "pydantic>=2.12.4",
    "pyjwt>=2.10.1",
]

[project.scripts]
auth = "auth:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
core = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
